--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+    compile 'com.google.code.gson:gson:2.7'
 }
