--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
