--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    // Floating Menu/Action Button
+    compile 'com.github.clans:fab:1.6.2'
 }
